@@ -64,4 +64,6 @@
 
 #define CANTATA_ICON_THEME "@CANTATA_ICON_THEME@"
 
+#define ENABLE_VIEW_BACKGROUND (QT_VERSION < QT_VERSION_CHECK(5, 12, 0))
+
 #endif
